--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <p class="list-item">
-      <a class="list-item-link" href="index.html">Go back</a>
+      <a class="list-item-link" href="index.html">Go back to maine</a>
     </p>
 
     <input type="text" id="datetime-picker" />
