--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -11,7 +11,7 @@
       <a class="list-item-link" href="index.html">Go back to maine</a>
     </p>
 
-    <input type="text" id="datetime-picker" />
+    <input type="text" id="date-time-picker" />
     <button type="button" data-start>Start</button>
 
     <div class="timer">
