--- a/src/01-color-switcher.html
+++ b/src/01-color-switcher.html
@@ -13,7 +13,13 @@
 
     <button type="button" data-start>Start</button>
     <button type="button" data-stop>Stop</button>
-
+    <audio
+      src="next-level.mp3"
+      class="audio"
+      id="audio-player"
+      controls
+      type="audio/mpeg"
+    ></audio>
     <script src="js/01-color-switcher.js" type="module"></script>
   </body>
 </html>
