--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <p class="list-item">
-      <a class="list-item-link" href="index.html">Go back to maine</a>
+      <a class="list-item-link" href="index.html">Go back to main</a>
     </p>
 
     <form class="form">
